--- a/html/html-and-the-web_personal-website/index.html
+++ b/html/html-and-the-web_personal-website/index.html
@@ -2,12 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Daniel Riley</title>
-    <meta name="description" content="" />
+    <title>Daniel Riley - Type Designer and Full-Stack Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- link CSS stylesheet -->
+
     <link rel="stylesheet" href="styles.css" />
-    <!-- link fonts from google -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,13 +17,11 @@
 
   <body>
     <header>
-      <nav></nav>
       <h1>Daniel Riley</h1>
     </header>
-    <section></section>
 
     <footer>
-      <h4>Contact me</h4>
+      <a href="mailto:hallo@danielriley.de">Contact me</a>
     </footer>
   </body>
 </html>
