create client-side form validation

--- a/JS/js-forms/js-forms-2_formvalidation/index.html
+++ b/JS/js-forms/js-forms-2_formvalidation/index.html
@@ -32,6 +32,9 @@
             name="firstName"
             id="first-name"
             placeholder="Your first name"
+            minlength="4"
+            maxlength="30"
+            required
           />
 
           <label for="last-name">Last Name</label>
@@ -40,13 +43,16 @@
             name="lastName"
             id="last-name"
             placeholder="Your last name"
+            minlength="4"
+            maxlength="30"
+            required
           />
 
           <label for="age">Age</label>
-          <input type="number" name="age" id="age" />
+          <input type="number" name="age" id="age" min="14" />
 
           <label for="email">Email</label>
-          <input type="text" name="email" id="email" />
+          <input type="email" name="email" id="email" />
         </fieldset>
 
         <fieldset>
@@ -88,6 +94,7 @@
           <label for="terms-of-service">
             <input
               type="checkbox"
+              required
               name="terms-of-service"
               id="terms-of-service"
             />
